anydsl_runtime_wrap(HARRIS_CORNER_PROC_PROGRAM
    CLANG_FLAGS ${CLANG_FLAGS}
    IMPALA_FLAGS ${IMPALA_FLAGS}
    FILES ${APPS_CONFIG_FILES} ${COMMON_DISABLE_PIPELINE_FILES} ${HARRIS_CORNER_FILES})
add_executable(harris_corner_proc "${HARRIS_CORNER_DIR}/main.cpp" ${HARRIS_CORNER_PROC_PROGRAM})
target_link_libraries(harris_corner_proc ${ANYDSL_RUNTIME_LIBRARIES})
set_target_properties(harris_corner_proc PROPERTIES COMPILE_FLAGS -DSTINCILLA_DATA_TYPE=${STINCILLA_DATA_TYPE})
set_target_properties(harris_corner_proc PROPERTIES CXX_STANDARD 11 CXX_STANDARD_REQUIRED ON)
